minor improvement
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@927768 13f79535-47bb-0310-9956-ffa450edef68